<resources>
    <string name="app_name">StockNFC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="consultarProductos">Consultar Productos</string>
    <string name="stock">Administrar Stock</string>
    <string name="configuracion">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmento_1_titulo">Fragmento 1</string>
    <string name="info">Informacion general</string>
    <string name="title_activity_login">Sign in</string>


    <string name="usuarioTxt">Email usuario</string>
    <string name="passTxt">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="registroTxt">Registro de usuario</string>
    <string name="emailTxt">Email</string>
    <string name="rolTxt">Rol</string>
    <string name="entrar">Entrar</string>
    <string name="aceptar">Aceptar</string>
    <string name="nombreArticulo">Nombre articulo</string>
    <string name="stockArticulo">Stock</string>
    <string name="alertaStock">Alerta stock</string>
    <string name="precioArticulo">Precio</string>
    <string name="fechaArticulo">Fecha</string>
    <string name="proveedorArticulo">Proveedor</string>
    <string name="guardar">Guardar</string>
    <string name="msnNombreNulo">El artículo debe tener un nombre</string>
    <string name="msnStockNulo">El stock del producto no puede estar vacío</string>
    <string name="msnStockNegativo">El stock del producto debe ser igual o mayor a cero</string>
    <string name="msnAlertaNulo">El atrobuto \"Alerta\" no tiene valor, se entenderá como desactivada</string>
    <string name="noAplica">N/A</string>
    <string name="obtenerImagen">Obtener imagen de:</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    <string name="atras">Atras</string>
    <string name="listaArticulos">Listado de Productos</string>
    <string name="alerta">Alerta</string>
    <string name="stockArticuloText">Stock disponible (Uds)</string>
    <string name="alertaText">Alerta stock bajo</string>
    <string name="precioArticuloText">Precio por unidad</string>
    <string name="proveedorArticuloText">Email del proveedor</string>
    <string name="nfc_operativo">NFC operativo</string>
    <string name="nfcNoOperativo">NFC inhabilitado o inexistente</string>
    <string name="NFCDetectado">Pegatina NFC detectada</string>
    <string name="errorEscritura">Error al escribir en la pegatina</string>
    <string name="noHayPegatina">No se detecta pegatina NFC</string>
    <string name="escrituraCorrecta">Escritura correcta</string>
    <string name="errorArticulo">No se puede guardar el artículo</string>
    <string name="title_activity_escritura_nfc">EscrituraNFCActivity</string>
    <string name="title_activity_control_stock">ControlStockActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="infoControlStock">Seleccione el número de unidades vendidas.</string>
    <string name="realizarPedido">Pedidos</string>
    <string name="anhadirUsuario">Añadir Usuario</string>
    <string name="alertasStock">Gestion de Alertas</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="emailRegistroTxt">Email del usuario</string>
    <string name="contrasenhaRegistroTxt">Contraseña</string>
    <string name="rolRegistroTxt">Rol del usuario</string>
    <string name="registroUsuario">Registro Usuario</string>
    <string name="controlStock">Control de Stock</string>
    <string name="pedidos">Pedidos</string>
    <string name="msnProveedorNulo">El email del proveedor no debe estar vacío</string>
    <string name="nombreArticuloPedido">Nombre del Artículo</string>
    <string name="stockPedidoText">Numero de uds a pedir</string>
    <string name="stockPedido">Nº uds del pedido</string>
    <string name="gestionAlertas">Pedidos con alerta</string>
    <string name="enviandoEmail">Enviando email a proveedor</string>
    <string name="asuntoEmail">Realización de pedido</string>
    <string name="emailEnviado">Email enviado</string>
    <string name="asuntoEmailAlerta">Alerta por stock bajo!!</string>

    <string-array name="array_roles">
        <item>Administrador</item>
        <item>Empleado</item>
    </string-array>
</resources>
