<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/consultarProductoMenu"
            android:icon="@drawable/trolley"
            android:title="@string/consultarProductos"
            android:color="@color/lightGrey" android:state_checked="true" />
        <item
            android:id="@+id/administrarStock"
            android:icon="@drawable/checked"
            android:title="@string/stock"
            android:color="@color/lightGrey" android:state_checked="true"/>
        <item
            android:id="@+id/pedidoMenu"
            android:icon="@drawable/dollar"
            android:title="@string/realizarPedido"
            android:color="@color/lightGrey" android:state_checked="true"/>
        <item
            android:id="@+id/alertaStockMenu"
            android:icon="@drawable/alerta"
            android:title="@string/alertasStock"
            android:color="@color/lightGrey" android:state_checked="true"/>
        <item
            android:id="@+id/anhadirUsuarioMenu"
            android:icon="@drawable/user"
            android:title="@string/anhadirUsuario"
            android:color="@color/lightGrey" android:state_checked="true"/>

            <item
                android:id="@+id/cerrarSesion"
                android:icon="@drawable/login"
                android:title="@string/cerrarSesion"
                android:color="@color/lightGrey" android:state_checked="true"/>
    </group>


</menu>
