<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.victor.stocknfc.logIn.Registro">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registroTxt"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/usuarioRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuarioTxt"
        android:inputType="text"/>

    <EditText
        android:id="@+id/passRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passTxt"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/emailRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailTxt"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/rolRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rolTxt"
        android:inputType="text"/>

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>
