<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.victor.stocknfc.fragmetos.Fragmento_Articulo">

    <include layout="@layout/toolbar_articulo"></include>
    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/nombreArticulo"
        android:layout_below="@+id/toolbarArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreArticulo"
        android:inputType="text"/>
    <TextView
        android:id="@+id/stockText"
        android:layout_below="@+id/nombreArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/stockArticuloText"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"/>
    <EditText
        android:id="@+id/stockArticulo"
        android:layout_below="@+id/stockText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stockArticulo"
        android:inputType="number"/>
    <TextView
        android:id="@+id/alertaText"
        android:layout_below="@+id/stockArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/alertaText"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"/>
    <EditText
        android:id="@+id/alertaArticulo"
        android:layout_below="@+id/alertaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alertaStock"
        android:inputType="number"/>
    <TextView
        android:id="@+id/precioText"
        android:layout_below="@+id/alertaArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/precioArticuloText"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"/>
    <EditText
        android:id="@+id/precioArticulo"
        android:layout_below="@+id/precioText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precioArticulo"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/fechaArticulo"
        android:layout_below="@+id/precioArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fechaArticulo"
        android:enabled="false"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/proveedorText"
        android:layout_below="@+id/precioArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/proveedorArticuloText"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"/>
    <EditText
        android:id="@+id/proveedorArticulo"
        android:layout_below="@+id/proveedorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/proveedorArticulo"
        android:inputType="textEmailAddress"/>
    <ImageView
        android:id="@+id/imgArticulo"
        android:layout_below="@+id/proveedorArticulo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/trolley"
        android:layout_gravity="center"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnGuardarArticuloNFC"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|right|end"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/nfc" />

</RelativeLayout>
